--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,8 +1,8 @@
 <script src="https://giscus.app/client.js"
         data-repo="CristeAndrei/blog"
-        data-repo-id="R_kgDOHs0Yyw"
+        data-repo-id="R_kgDOHs2Htw"
         data-category="Announcements"
-        data-category-id="DIC_kwDOHs0Yy84CQX3C"
+        data-category-id="DIC_kwDOHs2Ht84CQX8a"
         data-mapping="pathname"
         data-reactions-enabled="1"
         data-emit-metadata="0"
